--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -30,7 +30,7 @@
     visibility: visible;
     // z-index: -1;
   }
-  & .plator__fullscreen {
+  &.plator__player__fullscreen {
     position: fixed;
     top: 0;
     left: 0;
@@ -42,9 +42,6 @@
     background: #000;
     border-radius: 0!important;
     display: flex;
-  }
-  & .plator__controls {
-    // z-index: 2147483464;
   }
 }
 
