--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -11,10 +11,13 @@
   border-radius: 5px;
   cursor: pointer;
   margin-bottom: 20px;
-  video {
+  & video {
     width: 100%;
     height: auto;
     cursor: pointer;
+    &::-webkit-media-controls {
+      display: none !important;
+    }
   }
   &:before {
     content: '';
@@ -141,7 +144,7 @@
   font-size: 32px;
   align-items: center;
   padding: 10px;
-  transform: translateY(52px);
+  transform: translateY(0);
   justify-content: space-between;
   border-radius: 0 0 5px 5px;
 }
@@ -155,11 +158,18 @@
     opacity: 0;
     visibility: hidden;
   }
+}
+
+.plator__player.is-waiting {
+  &:before {
+    background-color: gray;
+    background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
+  }
+}
+
+.plator__player.hide-control {
   & .plator__player__controls {
     transform: translateY(52px);
-  }
-  &:hover .plator__player__controls {
-    transform: translateY(0);
   }
 }
 
@@ -232,8 +242,4 @@ input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
   border: none;
   border-radius: 100%;
   box-sizing: border-box
-}
-
-video::-webkit-media-controls-enclosure {
-  display: none !important;
 }
