--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -48,6 +48,18 @@
   }
 }
 
+.plator__player__poster {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  background-size: 100%;
+  opacity: 1;
+  visibility: visible;
+  transition: all .2s;
+}
+
 .plator__player__title {
   position: absolute;
   left: 20px;
@@ -158,13 +170,35 @@
     opacity: 0;
     visibility: hidden;
   }
+
+  & .plator__player__poster {
+    opacity: 0;
+    visibility: hidden;
+  }
 }
 
 .plator__player.is-waiting {
-  &:before {
-    background-color: gray;
-    background-image: repeating-linear-gradient(45deg, transparent, transparent 35px, rgba(255,255,255,.5) 35px, rgba(255,255,255,.5) 70px);
+  & .plator__player__progress {
+    animation: plator-progress 1s linear infinite;
+    background-size: 22px 22px;
+    background-repeat: repeat-x;
+    background-image: linear-gradient(
+        -45deg,
+        rgba(0, 0, 0, .25) 25%,
+        transparent 25%,
+        transparent 50%,
+        rgba(0, 0, 0, .25) 50%,
+        rgba(0, 0, 0, .25) 75%,
+        transparent 75%,
+        transparent
+    );
   }
+}
+
+@keyframes plator-progress {
+    to {
+        background-position: 22px 0;
+    }
 }
 
 .plator__player.hide-control {
