--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -289,3 +289,15 @@ input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
   border-radius: 100%;
   box-sizing: border-box
 }
+
+.plator__player--audio {
+  height: 42px;
+  &:before {
+    display: none;
+  }
+  &.hide-control {
+    & .plator__player__controls {
+      transform: translateY(0);
+    }
+  }
+}
