fix: audio event

--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -295,6 +295,9 @@ input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
   &:before {
     display: none;
   }
+  & .plator__player__controls {
+    background: rgba(0,0,0,0.4);
+  }
   &.hide-control {
     & .plator__player__controls {
       transform: translateY(0);
