--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -1,7 +1,6 @@
 :root {
   --mainColor: #00CF7D;
 }
-
 .plator__player {
   -webkit-user-select: none;
   user-select: none;
@@ -17,7 +16,7 @@
   & video {
     width: 100%;
     height: auto;
-    cursor: pointer;
+    vertical-align: middle;
     &::-webkit-media-controls {
       display: none !important;
     }
@@ -147,6 +146,7 @@
   transform: translateY(0);
   justify-content: space-between;
   border-radius: 0 0 5px 5px;
+  z-index: 4;
 }
 .plator__player.is-playing {
   &:before {
@@ -161,7 +161,7 @@
 
   & .plator__player__poster {
     opacity: 0;
-    visibility: hidden;
+    // visibility: hidden;
   }
 }
 
@@ -175,7 +175,7 @@
   & .plator__player__controls {
     transform: translateY(0);
     animation: plator-progress 1s linear infinite;
-    background-size: 42px 42px;
+    background-size: 46px 46px;
     background-repeat: repeat-x;
     background-image: linear-gradient(
       -45deg,
@@ -192,7 +192,7 @@
 
 @keyframes plator-progress {
     to {
-        background-position: 42px 0;
+        background-position: 46px 0;
     }
 }
 
@@ -272,7 +272,6 @@ input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
   &:before {
     display: none;
   }
-  // audio:not([controls])
   & audio {
     display: none;
     height: 0;
