--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -63,7 +63,10 @@
   top: 0;
   width: 100%;
   height: 100%;
-  background-size: 100%;
+  background-color: #000;
+  background-size: contain;
+  background-repeat: no-repeat;
+  background-position: 50% 50%;
   opacity: 1;
   visibility: visible;
   transition: all .2s;
@@ -81,9 +84,10 @@
 }
 .plator__player__time--current,
 .plator__player__time--total {
-  width: 60px;
+  max-width: 60px;
   font-size: 12px;
   color: #fff;
+  margin: 0 10px;
   text-align: center;
 }
 .plator__player__button {
@@ -199,7 +203,6 @@
 .plator__player__progress {
   position: relative;
   flex: 1;
-  margin-right: 10px;
   height: 22px;
 }
 .plator__player__progress--played,
@@ -285,5 +288,21 @@ input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
     & .plator__player__controls {
       transform: translateY(0);
     }
+  }
+}
+
+.plator__player__quality--list {
+  font-size: 10px;
+  border: 1px solid #fff;
+  border-radius: 2px;
+  padding: 0 1px;
+  margin-right: 5px;
+  & select {
+    font-size: 9px;
+    border: none;
+    color: #fff;
+    outline: none;
+    -webkit-appearance: none;
+    background: transparent;
   }
 }
