feat: error handle

--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -1,5 +1,5 @@
 :root {
-  --mainColor: #00CF7D;
+  --mainColor: #fff;
 }
 .plator__player {
   -webkit-user-select: none;
@@ -129,6 +129,10 @@
   z-index: 6;
   & svg {
     font-size: 70px;
+  }
+  & span {
+    font-size: 14px;
+    display: block;
   }
 }
 .plator__player__slider {
