--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -300,13 +300,14 @@ input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
 
 .plator__player__quality--list {
   font-size: 10px;
-  border: 1px solid #fff;
-  border-radius: 2px;
-  padding: 0 1px;
+  line-height: 22px;
   margin-right: 5px;
   & select {
-    font-size: 9px;
-    border: none;
+    font-size: 8px;
+    padding: 0 2px;
+    line-height: 10px;
+    border: 1px solid #fff;
+    border-radius: 2px;
     color: #fff;
     outline: none;
     -webkit-appearance: none;
