fix: volume icon

--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -332,3 +332,10 @@ input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
   margin: 0;
   padding: 0;
 }
+
+.plator__player__volume {
+  margin-right: 5px;
+  & svg {
+    font-size: 20px;
+  }
+}
