fix: button touch-action

--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -103,6 +103,7 @@
   justify-content: center;
   display: flex;
   max-width: 50px;
+  touch-action: manipulation;
   & svg {
     font-size: 22px;
   }
