--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -4,12 +4,10 @@
 .plator__player {
   -webkit-user-select: none;
   user-select: none;
-  border: 0 solid rgba(0, 0, 0, 0.2);
-  box-shadow: 0 0 20px rgba(0, 0, 0, 0.2);
+  border: none;
   position: relative;
   font-size: 0;
   overflow: hidden;
-  border-radius: 5px;
   cursor: pointer;
   margin-bottom: 20px;
   font-family: 'Helvetica Neue', 'Segoe UI', Helvetica, Arial, sans-serif;
@@ -30,7 +28,6 @@
     bottom: 0;
     right: 0;
     background: radial-gradient(ellipse at center, rgba(0, 0, 0, 0) 0%, rgba(0, 0, 0, 0.65) 100%);
-    border-radius: 5px;
     transition: opacity .2s;
     opacity: 1;
     visibility: visible;
@@ -46,7 +43,6 @@
     width: 100%;
     z-index: 10000000;
     background: #000;
-    border-radius: 0!important;
     display: flex;
   }
   & svg {
@@ -145,7 +141,6 @@
   padding: 10px;
   transform: translateY(0);
   justify-content: space-between;
-  border-radius: 0 0 5px 5px;
   z-index: 4;
 }
 .plator__player.is-playing {
@@ -249,22 +244,23 @@ input.plator__player__progress--track[type=range] {
 }
 
 input.plator__player__progress--track[type=range]::-webkit-slider-runnable-track {
-  height: 8px;
+  height: 2px;
   background: 0 0;
   border: 0;
-  border-radius: 4px;
+  border-radius: 0;
   -webkit-user-select: none;
   user-select: none
 }
 
 input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
-  margin-top: -3px;
+  margin-top: -10px;
   position: relative;
-  height: 14px;
-  width: 14px;
-  background: #fff;
-  border: none;
+  height: 22px;
+  width: 22px;
+  border: 4px solid rgba(0,0,0,.1);
+  background-color: #fff;
+  background-clip: padding-box;
   border-radius: 100%;
   box-sizing: border-box
 }
