style(thumb): remove default border in iOS

--- a/src/css/style.pcss
+++ b/src/css/style.pcss
@@ -253,11 +253,14 @@ input.plator__player__progress--track[type=range]::-webkit-slider-runnable-track
 
 input.plator__player__progress--track[type=range]::-webkit-slider-thumb {
   -webkit-appearance: none;
+  appearance: none;
   margin-top: -8px;
   position: relative;
   height: 18px;
   width: 18px;
   background-color: #fff;
+  border: none;
+  box-shadow: 0 0 4px rgba(0,0,0,.2);
   border-radius: 100%;
   box-sizing: border-box
 }
